// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RangeInput renders markup with state 1`] = `
<ng-component
  testedWidget={[Function NgAisRangeInput]}
>
  
        <ng-ais-instantsearch>
    
          
    <ng-ais-range-input>
      
      
      <div
        class="ais-RangeInput"
      >
        
        
        <form
          class="ais-RangeInput-form"
          novalidate=""
        >
          
          
          <label
            class="ais-RangeInput-label"
          >
            
            
            <span
              class="ais-RangeInput-currency"
            >
              $
            </span>
            
            
            <input
              class="ais-RangeInput-input--min"
              max="100"
              min="0"
              placeholder="0"
              step="0.01"
              type="number"
            />
            
          
          </label>
          
  
          
          <span
            class="ais-RangeInput-separator"
          >
            to
          </span>
          
  
          
          <label
            class="ais-RangeInput-label"
          >
            
            
            <span
              class="ais-RangeInput-currency"
            >
              $
            </span>
            
            
            <input
              class="ais-RangeInput-input--max"
              max="100"
              min="0"
              placeholder="100"
              step="0.01"
              type="number"
            />
            
          
          </label>
          
  
          
          <button
            class="ais-RangeInput-submit"
          >
            
            Go
          
          </button>
          
        
        </form>
        
      
      </div>
      
    
    </ng-ais-range-input>
    
        
  </ng-ais-instantsearch>
      
</ng-component>
`;

exports[`RangeInput renders markup without state 1`] = `
<ng-component
  testedWidget={[Function NgAisRangeInput]}
>
  
        <ng-ais-instantsearch>
    
          
    <ng-ais-range-input>
      
      
      <div
        class="ais-RangeInput"
      >
        
        
        <form
          class="ais-RangeInput-form"
          novalidate=""
        >
          
          
          <label
            class="ais-RangeInput-label"
          >
            
            
            <span
              class="ais-RangeInput-currency"
            >
              $
            </span>
            
            
            <input
              class="ais-RangeInput-input--min"
              max="undefined"
              min="undefined"
              placeholder="undefined"
              step="0.01"
              type="number"
            />
            
          
          </label>
          
  
          
          <span
            class="ais-RangeInput-separator"
          >
            to
          </span>
          
  
          
          <label
            class="ais-RangeInput-label"
          >
            
            
            <span
              class="ais-RangeInput-currency"
            >
              $
            </span>
            
            
            <input
              class="ais-RangeInput-input--max"
              max="undefined"
              min="undefined"
              placeholder="undefined"
              step="0.01"
              type="number"
            />
            
          
          </label>
          
  
          
          <button
            class="ais-RangeInput-submit"
          >
            
            Go
          
          </button>
          
        
        </form>
        
      
      </div>
      
    
    </ng-ais-range-input>
    
        
  </ng-ais-instantsearch>
      
</ng-component>
`;
